--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <h1>My First Cloud Deployment</h1>
 <h2>Hello, my name is DARYL</h2>
-<img src="https://en.wikipedia.org/wiki/Dinosaur#/media/File:Neognathae.jpg" width="200"/>
+<img src="https://upload.wikimedia.org/wikipedia/commons/f/f5/Neognathae.jpg" width="200"/>
+
 <p>This is my first deployed website!</p>
